--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -67,6 +67,51 @@
     text-decoration: none;
   }
 
+
+  .btn41-43 {
+    padding: 10px 25px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    background: transparent;
+    outline: none !important;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+  }
+  
+  .btn-42 {
+    border: 2px solid rgb(255, 255, 255);
+    z-index: 1;
+    color: white;
+  }
+  
+  .btn-42:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    background: rgb(255, 255, 255);
+    transition: all 0.3s ease;
+  }
+  
+  .btn-42:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+  }
+  
+  .btn-42:hover:after {
+    top: 0;
+    height: 100%;
+  }
+  
+  .btn-42:active {
+    top: 2px;
+  }
+
   /* Answer circles */
   
 .answer_nav  {
@@ -155,7 +200,7 @@
   transition: all .35s;
 }
 
-.pause_a .pause_span , .mode_h_a .mode_h_span{
+.pause_a .pause_span , .mode_h_a .mode_h_span ,.result_span{
   position: relative;
   z-index: 2;
 }
@@ -189,5 +234,28 @@
   padding: 0px 10px;
 }
 
+.square {
+  height: 50px;
+  width: 50px;
+  background-color: #555;
+  border: 1px;
+  /* position: absolute; */
+}
 
-  
+.health_have{
+  background-color: #ffffff;
+}
+.health_lost{
+  background-color: #636363;
+}
+tr{
+  border-color: #000000;
+}
+
+img{
+  object-fit: cover;
+}
+
+.user_charct td {
+  text-align: center;   
+}
